services/testing/testing-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: testing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: app
          image: smrtrfszm/vfg-backend2
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: testing
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 3000
